# dmf-g16

./: README.md  pyproject.toml
src/dmfg16/: _io.py  _workflow.py  cli.py
